# wgs

./: .gitignore  CMakeLists.txt  local.cpp  main.cpp  messages.md  online.cpp  server.cpp
code/: CMakeLists.txt
code/actions/: CMakeLists.txt
code/actions/blackjack/: CMakeLists.txt
code/actions/blackjack/include/actions/blackjack/: BlackjackRestartAction.hpp  DoubleAndReturnPlayersBetAction.hpp  DoublePlayersBetAction.hpp  GetBetFromPlayerAction.hpp  MultiAction.hpp  PlayerDrawsCardAction.hpp  PlayerDrawsReversedCardAction.hpp  PlayerSplitsAction.hpp  ReturnHalfOfPlayerBetAction.hpp  ReturnPlayerBetAction.hpp  ShowDealersCardsAction.hpp
code/actions/blackjack/src/: BlackjackRestartAction.cpp  DoubleAndReturnPlayersBetAction.cpp  DoublePlayersBetAction.cpp  EndGameAction.cpp  GetBetFromPlayerAction.cpp  GoToNextPlayerAction.cpp  MultiAction.cpp  PlayerDrawsCardAction.cpp  PlayerDrawsReversedCardAction.cpp  PlayerSplitsAction.cpp  RestartAction.cpp  ReturnHalfOfPlayerBetAction.cpp  ReturnPlayerBetAction.cpp  SendMessageAction.cpp  ShowDealersCardsAction.cpp
code/actions/bridge/: CMakeLists.txt
code/actions/bridge/include/actions/bridge/: BridgeDealAction.hpp  BridgeRestartAction.hpp  CurrentPlayerPlaysCardAction.hpp  CurrentPlayerStartsNewTrickAction.hpp  EndAuctionAction.hpp  EndTrickAction.hpp  GetNextCallFromPlayerAction.hpp  SendAfterGameInfoAction.hpp
code/actions/bridge/src/: BridgeDealAction.cpp  BridgeRestartAction.cpp  CurrentPlayerPlaysCardAction.cpp  CurrentPlayerStartsNewTrickAction.cpp  EndAuctionAction.cpp  EndTrickAction.cpp  GetNextCallFromPlayerAction.cpp  SendAfterGameInfoAction.cpp
code/actions/common/: CMakeLists.txt
code/actions/common/include/actions/common/: EmptyAction.hpp  EndGameAction.hpp  GoToNextPlayerAction.hpp  PlayerDrawsCardAction.hpp  RestartAction.hpp  SendMessageAction.hpp  ShowPlayersHandAction.hpp
code/actions/common/src/: EmptyAction.cpp  EndGameAction.cpp  GoToNextPlayerAction.cpp  MultiAction.cpp  PlayerDrawsCardAction.cpp  RestartAction.cpp  SendMessageAction.cpp  ShowPlayersHandAction.cpp
code/components/: CMakeLists.txt
code/components/include/components/: BridgeAuctionComponent.hpp  BridgeTricksComponent.hpp  ChipsComponent.hpp  Component.hpp  ComponentProvider.hpp  ConnectionComponent.hpp  HandsComponent.hpp
code/components/include/components/cards/: BridgeCall.hpp  Card.hpp  CardDeck.hpp  CardHolder.hpp  PlayingCard.hpp
code/components/src/: BridgeAuctionComponent.cpp  BridgeTricksComponent.cpp  ChipsComponent.cpp  Component.cpp  ComponentProvider.cpp  ConnectionComponent.cpp  HandsComponent.cpp  PlayerComponent.cpp
code/components/src/cards/: BridgeCall.cpp  Card.cpp  CardDeck.cpp  CardHolder.cpp  PlayingCard.cpp
code/conditions/: CMakeLists.txt
code/conditions/blackjack/: CMakeLists.txt
code/conditions/blackjack/include/conditions/blackjack/: CurrentPlayerIsXCondition.hpp  HandScoreAtLeastXCondition.hpp  HandSizeUnderXCondition.hpp  PlayerCanBetCondition.hpp  PlayerCanDoubleBetCondition.hpp  PlayerCanSplitCondition.hpp  PlayerHaveNon0BetCondition.hpp  RelationBetweenPlayerAndDealerHandCondition.hpp
code/conditions/blackjack/src/: CurrentPlayerIsXCondition.cpp  HandScoreAtLeastXCondition.cpp  HandSizeUnderXCondition.cpp  PlayerCanBetCondition.cpp  PlayerCanDoubleBetCondition.cpp  PlayerCanSplitCondition.cpp  PlayerHaveNon0BetCondition.cpp  RelationBetweenPlayerAndDealerHandCondition.cpp
code/conditions/bridge/: CMakeLists.txt
code/conditions/bridge/include/conditions/bridge/: AuctionToContinueCondition.hpp  CurrentTrickIsFullCondition.hpp  CurrentTricksIsFullCondition.hpp
code/conditions/bridge/src/: AuctionToContinueCondition.cpp  CurrentTrickIsFullCondition.cpp  CurrentTricksIsFullCondition.cpp
code/conditions/common/: CMakeLists.txt
code/conditions/common/include/conditions/common/: AlwaysTrueCondition.hpp  AndCondition.hpp  NotCondition.hpp  OrCondition.hpp
code/conditions/common/src/: AlwaysTrueCondition.cpp  AndCondition.cpp  HandSizeUnderXCondition.cpp  NotCondition.cpp  OrCondition.cpp
code/connection/: CMakeLists.txt
code/connection/include/connection/: AbstractSendRec.hpp  ConcreteSendRec.hpp  LocalSendRec.hpp
code/connection/src/: ConcreteSendRec.cpp  LocalSendRec.cpp
code/edges/: CMakeLists.txt
code/edges/include/edges/: Action.hpp  Condition.hpp  Edge.hpp
code/edges/src/: Edge.cpp
code/factories/: CMakeLists.txt
code/factories/include/factories/: BlackjackFactory.hpp  BridgeFactory.hpp
code/factories/src/: BlackjackFactory.cpp  BridgeFactory.cpp
code/game/: CMakeLists.txt
code/game/include/game/: Game.hpp  Graph.hpp
code/game/src/: Game.cpp  Graph.cpp
code/server/: CMakeLists.txt
code/server/include/server/: ConnectionManager.hpp  LocalConnectionManager.hpp
code/server/src/: ConnectionManager.cpp  LocalConnectionManager.cpp  UDPManager.cpp
include/: AbstractSendRec.hpp  BJSendRec.hpp  BlackjackFactory.hpp  ConcreteSendRec.hpp  Game.hpp  Graph.hpp  LocalSendRec.hpp  PlayerConnection.hpp  PlayersConnection.hpp  TempSender.hpp
include/Components/: ChipsComponent.hpp  Component.hpp  ComponentProvider.hpp  ConnectionComponent.hpp  HandsComponent.hpp  PlayerComponent.hpp  PlayingCard.hpp  PlayingCardsDeck.hpp
include/Components/Cards/: Card.hpp  CardHolder.hpp  DeckComponent.hpp  PlayingCard.hpp
include/Edges/: Edge.hpp
include/Edges/Actions/: Action.hpp  ChangeToDealerAction.hpp  ChangeToPlayerAction.hpp  ClearHandsAction.hpp  DoubleAndReturnPlayersBetAction.hpp  DoublePlayersBetAction.hpp  EmptyAction.hpp  EndGameAction.hpp  (+14 more)
include/Server/: ConnectionManager.hpp  LocalConnectionManager.hpp  UDPManager.hpp
src/: BJSendRec.cpp  BlackjackFactory.cpp  ConcreteSendRec.cpp  Game.cpp  Graph.cpp  LocalSendRec.cpp  PlayerConnection.cpp  TempSender.cpp
src/Components/: ChipsComponent.cpp  Component.cpp  ComponentProvider.cpp  ConnectionComponent.cpp  HandsComponent.cpp  PlayerComponent.cpp  PlayingCard.cpp  PlayingCardsDeck.cpp
src/Edges/: Edge.cpp
src/Server/: ConnectionManager.cpp  LocalConnectionManager.cpp  UDPManager.cpp
(+52 files in other folders)
