cmake_minimum_required(VERSION 3.22)
project(wgs)

set(CMAKE_CXX_STANDARD 20)

add_executable(server server.cpp
        src/Components/Cards/CardHolder.cpp
        src/Components/Cards/PlayingCard.cpp
        src/Components/Cards/DeckComponent.cpp
        src/Edges/Edge.cpp
        src/Edges/Conditions/BlackjackAtLeastXCondition.cpp
        src/Components/ComponentProvider.cpp
        src/Edges/Conditions/HandSizeUnderXCondition.cpp
        src/Edges/Actions/PlayerDrawsCardAction.cpp
        src/Edges/Actions/ChangeToDealerAction.cpp
        src/Edges/Conditions/AndCondition.cpp
        src/Components/ChipsComponent.cpp
        src/PlayerConnection.cpp
        src/Components/HandsComponent.cpp
        src/Components/ConnectionComponent.cpp
        src/Edges/Actions/GetBetFromPlayerAction.cpp
        src/Edges/Conditions/AlwaysTrueCondition.cpp
        src/Edges/Actions/DoublePlayersBetAction.cpp
        src/Edges/Actions/PlayerWonAction.cpp
        src/Edges/Actions/ChangeToPlayerAction.cpp
        src/Edges/Actions/PlayerDrawsReversedCardAction.cpp
        src/Edges/Actions/SendHandsAction.cpp
        src/Graph.cpp
        src/Game.cpp
        src/Edges/Conditions/PlayerCanDoubleBetCondition.cpp
        src/Edges/Conditions/NotCondition.cpp
        src/Edges/Actions/EmptyAction.cpp
        src/Edges/Actions/ShowDealersCardsAction.cpp
        src/Edges/Conditions/RelationBetweenPlayerAndDealerHandCondition.cpp
        src/Edges/Actions/EndGameAction.cpp
        src/Edges/Actions/SendMessageAction.cpp
        src/Edges/Actions/ClearHandsAction.cpp
        src/Edges/Actions/PlayerTiedAction.cpp
        src/Edges/Conditions/PlayerCanBetCondition.cpp
        src/Server/ConnectionManager.cpp
        src/Server/LocalConnectionManager.cpp
        src/Server/LocalConnectionManager.cpp
        src/Edges/Actions/ClearHandsAction.cpp
        src/Edges/Actions/PlayerTiedAction.cpp
        src/Edges/Conditions/PlayerCanBetCondition.cpp
        src/Components/Component.cpp
        src/Components/Cards/Card.cpp
        src/TempSender.cpp src/Edges/Actions/MultiAction.cpp)

add_executable(local local.cpp
        src/Components/Cards/CardHolder.cpp
        src/Components/Cards/PlayingCard.cpp
        src/Components/Cards/DeckComponent.cpp
        src/Edges/Edge.cpp
        src/Edges/Conditions/BlackjackAtLeastXCondition.cpp
        src/Components/ComponentProvider.cpp
        src/Edges/Conditions/HandSizeUnderXCondition.cpp
        src/Edges/Actions/PlayerDrawsCardAction.cpp
        src/Edges/Actions/ChangeToDealerAction.cpp
        src/Edges/Conditions/AndCondition.cpp
        src/Components/ChipsComponent.cpp
        src/PlayerConnection.cpp
        src/Components/HandsComponent.cpp
        src/Components/ConnectionComponent.cpp
        src/Edges/Actions/GetBetFromPlayerAction.cpp
        src/Edges/Conditions/AlwaysTrueCondition.cpp
        src/Edges/Actions/DoublePlayersBetAction.cpp
        src/Edges/Actions/PlayerWonAction.cpp
        src/Edges/Actions/ChangeToPlayerAction.cpp
        src/Edges/Actions/PlayerDrawsReversedCardAction.cpp
        src/Edges/Actions/SendHandsAction.cpp
        src/Graph.cpp
        src/Game.cpp
        src/Edges/Conditions/PlayerCanDoubleBetCondition.cpp
        src/Edges/Conditions/NotCondition.cpp
        src/Edges/Actions/EmptyAction.cpp
        src/Edges/Actions/ShowDealersCardsAction.cpp
        src/Edges/Conditions/RelationBetweenPlayerAndDealerHandCondition.cpp
        src/Edges/Actions/EndGameAction.cpp
        src/Edges/Actions/SendMessageAction.cpp
        src/Edges/Actions/ClearHandsAction.cpp
        src/Edges/Actions/PlayerTiedAction.cpp
        src/Edges/Conditions/PlayerCanBetCondition.cpp
        src/Edges/Actions/ClearHandsAction.cpp
        src/Edges/Actions/PlayerTiedAction.cpp
        src/Edges/Conditions/PlayerCanBetCondition.cpp
        src/Components/Component.cpp
        src/Components/Cards/Card.cpp
        src/Edges/Actions/MultiAction.cpp)
